# qfx-convert

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/qfxconvert/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
tests/data/: stmtrs-160.csv  stmtrs-160.json
